# inconsole2-system

./: .gitignore  .gitmodules  README.md  checklista.txt
board/ingraw/inconsole2/: boot.cmd
board/ingraw/inconsole2/assets/: bootlogo-kernel.xcf
board/ingraw/inconsole2/configs/: linux_defconfig  linux_input_bridge.fragment  uboot_defconfig
board/ingraw/inconsole2/devicetree/linux/: sun8i-inconsole2.dts  sun8i-t113.dtsi
board/ingraw/inconsole2/scripts/: genimage_sdcard.cfg  post-build.sh
configs/: ingraw_inconsole2_defconfig
package/: Config.in
package/inconsole-runtime/: Config.in  inconsole-runtime.mk
package/inconsole-runtime/src/: input_bridge.cpp  main.cpp  runtime.hpp  runtime_core.cpp  runtime_input.cpp  runtime_scenes.cpp
package/inconsole-runtime/userdata/system/: reset-remove.list  settings.json  undo_postscript.sh
tools/inconsole-runtime-x86/: CMakeLists.txt  README.md  build.sh  run.sh
tools/inconsole-runtime-x86/src/: main.cpp  runtime.hpp  runtime_core.cpp  runtime_renderer.cpp  runtime_scenes.cpp
tools/inconsole-runtime-x86/userdata-x86/apps/alfa/: app.json
tools/inconsole-runtime-x86/userdata-x86/apps/demo-app/: app.json
tools/inconsole-runtime-x86/userdata-x86/apps/info/: app.json  launch.sh
tools/inconsole-runtime-x86/userdata-x86/apps/long-truncate-test/: app.json  launch.sh
tools/inconsole-runtime-x86/userdata-x86/apps/test/: app.json  launch.sh
tools/inconsole-runtime-x86/userdata-x86/system/: postscript.sh  profile.json
tools/inconsole-runtime-x86/userdata-x86/system/languages/: fr.json
(+15 files in other folders)
